fix header wrap width in in-grid layout

--- a/style/header/_header.scss
+++ b/style/header/_header.scss
@@ -16,7 +16,7 @@
 
 		img {
 			display: block;
-			height: 38px;
+			height: $size__logo-height-mobile;
 			width: auto;
 			margin-top: 7px;
 			margin-bottom: 2px;
